potaris-website/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: potaris
  labels:
    app: potaris
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
    - hosts:
        - potaris.rancher.katzencluster.de
      secretName: potaris-tls
  rules:
    - host: potaris.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: potaris
                port:
                  number: 80
